--- a/website/index.html
+++ b/website/index.html
@@ -68,7 +68,7 @@
     </span>
     <header class="major">
       <h3><a href="features.html" class="link">Key Features</a></h3>
-      <p></p>
+      <p>Student life - Yours to discover</p>
     </header>
   </article>
   
